<resources>
    <string name="app_name">Sehat Donasi Online</string>
    <string name="email_login">Masukkan Email Anda</string>
    <string name="pass_login">Masukkan Password Anda</string>
    <string name="text_register">Register</string>
    <string name="text_signin">Sudah Melakukan Register ? Login Di Sini</string>
    <string name="text_judul_register">REGISTER PENGGUNA BARU</string>
    <string name="text_singup">Tidak punya akun ? Daftar Disini</string>
    <string name="text_login">Login User</string>
    <string name="text_btn_login">LOGIN</string>
    <string name="title_activity_menu_utama">Menu_utama</string>
    <string name="title_home">Home</string>
    <string name="victim">nama</string>
    <string name="detail">detail</string>
    <string name="goals">goals</string>
    <string name="date">tanggal</string>
    <string name="start_campaign">Start Campaign</string>
    <string name="nama">Masukkan Nama Penderita</string>
    <string name="story">Add Story Penderita</string>
    <string name="goals_campaign">Masukkan Goals Campaign</string>
    <string name="text_campaign">START CAMPAIGN</string>
    <string name="uploadImg">Upload Image Penderita</string>

    <string-array name="method">
        <item>Choose method</item>
        <item>BCA Virtual Account</item>
        <item>BRI Virtual Account</item>
        <item>BNI Virtual Account</item>
    </string-array>
</resources>
