<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/register_pg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:text="@string/start_campaign"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:layout_margin="15dp"
                android:id="@+id/edit_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/nama"/>

            <EditText
                android:layout_margin="15dp"
                android:id="@+id/edit_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textMultiLine"
                android:hint="@string/story"/>

            <EditText
                android:layout_margin="15dp"
                android:id="@+id/edit_goals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/goals_campaign"/>

            <ImageView
                android:id="@+id/victimImg"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:src="@drawable/imgunvaible"/>

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/btn_victim"
                style="@style/loginButton"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:text="@string/uploadImg"
                app:initialCornerAngle="27dp"
                app:spinning_bar_color="#FFF"
                app:spinning_bar_padding="6dp"
                app:spinning_bar_width="4dp" />

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/btn_campaign"
                style="@style/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/text_campaign"
                app:initialCornerAngle="27dp"
                app:spinning_bar_color="#FFF"
                app:spinning_bar_padding="6dp"
                app:spinning_bar_width="4dp" />

            <androidx.core.widget.ContentLoadingProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/proggressBar"/>

        </LinearLayout>

    </ScrollView>





</RelativeLayout>